WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186583
CFGSimplificationPhase should de-dupe jettisonedBlocks
https://bugs.webkit.org/show_bug.cgi?id=186583
Summary
CFGSimplificationPhase should de-dupe jettisonedBlocks
Saam Barati
Reported
2018-06-12 19:12:33 PDT
Otherwise, we may crash in removing a predecessor, since predecessor list is now also deduplicated.
Attachments
patch
(1.92 KB, patch)
2018-06-12 19:20 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2018-06-12 19:13:00 PDT
This should fix the crash on this test: js/dom/JSON-stringify.html introduced by
https://trac.webkit.org/changeset/232741/webkit
Saam Barati
Comment 2
2018-06-12 19:20:59 PDT
Created
attachment 342622
[details]
patch I'm in the middle of building, so I still need to test this, but I'm pretty sure it's the correct fix.
Saam Barati
Comment 3
2018-06-12 21:23:39 PDT
Comment on
attachment 342622
[details]
patch I've confirmed this fixes the crash.
Robin Morisset
Comment 4
2018-06-13 03:40:54 PDT
LGTM, but I'm not an official reviewer.
Ryan Haddad
Comment 5
2018-06-13 11:36:56 PDT
Pinging reviewers. We need the fix ASAP as this is affecting EWS.
WebKit Commit Bot
Comment 6
2018-06-13 12:04:16 PDT
Comment on
attachment 342622
[details]
patch Clearing flags on attachment: 342622 Committed
r232800
: <
https://trac.webkit.org/changeset/232800
>
WebKit Commit Bot
Comment 7
2018-06-13 12:04:18 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-06-13 12:29:29 PDT
<
rdar://problem/41097203
>
Yusuke Suzuki
Comment 9
2018-06-14 01:01:08 PDT
I think ARES-6 is still crashing.
https://arewefastyet.com/#machine=29&view=breakdown&suite=ares6
Saam Barati
Comment 10
2018-06-14 08:56:55 PDT
(In reply to Yusuke Suzuki from
comment #9
)
> I think ARES-6 is still crashing. >
https://arewefastyet.com/#machine=29&view=breakdown&suite=ares6
Michael is working on a fix
Yusuke Suzuki
Comment 11
2018-06-14 09:09:27 PDT
(In reply to Saam Barati from
comment #10
)
> (In reply to Yusuke Suzuki from
comment #9
) > > I think ARES-6 is still crashing. > >
https://arewefastyet.com/#machine=29&view=breakdown&suite=ares6
> > Michael is working on a fix
Nice!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug